--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -39,7 +39,7 @@
         </activity>
 
         <activity
-            android:name=".example.ui.home.news.detail.NewDetailActivity"
+            android:name=".example.ui.home.news.detail.NewsDetailActivity"
             android:screenOrientation="portrait">
         </activity>
     </application>
